fix: horizontal scroll

--- a/shelter/pages/main/src/sass/components/_our-friends.scss
+++ b/shelter/pages/main/src/sass/components/_our-friends.scss
@@ -23,6 +23,9 @@
   @include flex ();
   margin: 60px 0;
   width: 100%;
+  @include media-tablet-m {
+    flex-wrap: wrap;
+  }
   @include media-mobile-l {
     flex-wrap: wrap;
     margin: 42px 0;
