--- a/shelter/pages/main/src/sass/style.css
+++ b/shelter/pages/main/src/sass/style.css
@@ -1183,6 +1183,11 @@ img {
   margin: 60px 0;
   width: 100%;
 }
+@media (max-width: 740px) {
+  .our-friends__slider {
+    flex-wrap: wrap;
+  }
+}
 @media (max-width: 430px) {
   .our-friends__slider {
     flex-wrap: wrap;
